<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FRGBackground"
    tools:context=".FragmentLogin"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/FRGContainerPadding"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/TXV_FRGLogin_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FRGLogin_Title"
        android:textSize="@dimen/FRGTitleTextSize"
        android:textStyle="bold"
        android:textColor="@color/FRGTextPrimary"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:id="@+id/TXV_FRGLogin_User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FRGLogin_UsernameLabel"
        android:textSize="@dimen/FRGLabelTextSize"
        android:textColor="@color/FRGTextPrimary"
        android:layout_marginBottom="@dimen/FRGLabelMarginBottom"
        />
    <EditText
        android:id="@+id/EDT_FRGLogin_Username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/FRGInputHeight"
        android:background="@drawable/bg_frg_input"
        android:hint="@string/FRGLogin_UsernameHint"
        android:textColorHint="@color/FRGTextHint"
        android:textColor="@color/FRGTextPrimary"
        android:textSize="@dimen/FRGInputTextSize"
        android:paddingHorizontal="@dimen/FRGInputPadding"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_marginBottom="@dimen/FRGInputMarginBottom"
        />
    <TextView
        android:id="@+id/TXV_FRGLogin_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FRGLogin_PasswordLabel"
        android:textSize="@dimen/FRGLabelTextSize"
        android:textColor="@color/FRGTextPrimary"
        android:layout_marginBottom="@dimen/FRGLabelMarginBottom"
        />
    <EditText
        android:id="@+id/EDT_FRGLogin_Password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/FRGInputHeight"
        android:background="@drawable/bg_frg_input"
        android:hint="@string/FRGLogin_PasswordHint"
        android:textColorHint="@color/FRGTextHint"
        android:textColor="@color/FRGTextPrimary"
        android:textSize="@dimen/FRGInputTextSize"
        android:paddingHorizontal="@dimen/FRGInputPadding"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginBottom="@dimen/FRGLabelMarginBottom"
        />
    <TextView
        android:id="@+id/TXV_FRGLogin_RecoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRGLogin_RecoverPassword"
        android:textSize="@dimen/FRGLinkTextSize"
        android:textColor="@color/FRGTextHint"
        android:paddingVertical="@dimen/FRGLabelMarginBottom"
        android:layout_marginBottom="@dimen/FRGInputMarginBottom"
        />

    <Button
        android:id="@+id/BTN_FRGLogin_Login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/FRGButtonHeight"
        android:layout_marginBottom="@dimen/FRGButtonMarginBottom"
        android:text="@string/FRGLogin_LoginButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500"
        app:cornerRadius="@dimen/FRGButtonCornerRadius" />

    <Button
        android:id="@+id/BTN_FRGLogin_Register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/FRGButtonHeight"
        android:text="@string/FRGLogin_RegisterButton"
        android:textAllCaps="false"
        android:textColor="@color/FRGTextPrimary"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="@dimen/FRGButtonCornerRadius" />
</LinearLayout>
</ScrollView>
